Added Customer pin to static google maps

--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -8,7 +8,7 @@
     @media  (-o-min-device-pixel-ratio: 5/4),
             (-webkit-min-device-pixel-ratio: 1.25),
             (min-resolution: 120dpi) {
-              .map-google__static {
+              .map-google-static {
                 background-image: url("<%=raw getting_here_map_url(@centre, 2) %>");
               }
     }
