Added image of bondijunction

--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -31,7 +31,7 @@
       <%# Address box %>
       <div class="centre-location__info box slats">
         <div class="slats__img slats__img--compact">
-          <%= image_tag "heroes/#{@centre.code}-lrg.jpg",
+          <%= image_tag "heroes/#{@centre.code}.jpg",
             :crop => :thumb,
             :width => 120,
             :height => 130,
