--- a/app/views/layouts/sub_page.html.erb
+++ b/app/views/layouts/sub_page.html.erb
@@ -10,7 +10,7 @@
       <div class="vert-align__inner">
 
         <div class="hero__inner container container--narrow">
-          <span class="icon icon--hours icon--spacing-lrg" aria-hidden="true"></span>
+          <span class="icon icon--<%= @hero.icon %> icon--spacing-lrg" aria-hidden="true"></span>
           <h1><%= @hero.heading %></h1>
           <%= content_tag :p, @hero.text, class: 'hero__txt' if @hero.text %>
         </div>
