Adding national product routes.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :section_nav do %>
-  <%= render '/layouts/section_nav' %>
+  <%= render '/layouts/section_nav' if @centre %>
 <% end %>
 
 <h1 class="hide-visually">Products</h1>
