--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -148,11 +148,11 @@
 </div>
 
 <%# Availability %>
-<%- if @centres.present? -%>
+<%- if @product_centres.present? -%>
 <div class="island detail-view__divider--top-btm detail-view__divider--top">
   <h2 class="detail-view__hdr-sub detail-view__mrg-off hn">Available at</h2>
   <ul class="detail-view__centres">
-    <%- @centres.each do |centre| -%>
+    <%- @product_centres.each do |centre| -%>
       <li>
         <%= link_to centre_product_path(centre_id: centre.code, retailer_code: @product.retailer_code, sku: @product.sku),
           class: "list-divider" do %>
