--- a/app/assets/stylesheets/partials/modules/_pagination.scss
+++ b/app/assets/stylesheets/partials/modules/_pagination.scss
@@ -36,7 +36,8 @@
 	}
 
 		/* Links */
-		a {
+		a,
+    .pagination__btn {
 			@include to-em(padding, $spacing-micro $spacing-third);
 			background-color: $color-grey-lightest;
 			text-decoration: none; /* Note: this may be redundant? */
@@ -54,6 +55,8 @@
 		}
 
 		/* Pseudo elements - 'Previous' and 'Next' links */
+    .pagination__btn[rel="prev"]:before,
+    .pagination__btn[rel="next"]:after,
 		a[rel="prev"]:before,
 		a[rel="next"]:after {
 			speak: none;
@@ -61,12 +64,14 @@
 		}
 
 		/* Previous - single left-pointing angle quotation mark */
+    .pagination__btn[rel="prev"]:before,
 		a[rel="prev"]:before {
 			content: "\2039";
 			margin-right: to-em($spacing-quarter);
 		}
 
 		/* Next - single right-pointing angle quotation mark */
+    .pagination__btn[rel="next"]:after,
 		a[rel="next"]:after {
 			content: "\203a";
 			margin-left: to-em($spacing-quarter);
